--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
 <html lang="en">
-
 <head>
   <meta charset="utf-8">
   <title i18n>Pibui - Discover J-Music</title>
@@ -8,14 +7,8 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <script>
-    // Needed by sister module
-    global = {};
-  </script>
 </head>
-
 <body>
-  <pbi-root></pbi-root>
+  <pbi-root></app-root>
 </body>
-
 </html>
