Fix new added movies not showed when cleaning search Fix URL in meta tags/environment Add filter model

--- a/src/index.html
+++ b/src/index.html
@@ -12,17 +12,17 @@
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://beta.pibui.org/" />
+  <meta property="og:url" content="https://pibui.org/" />
   <meta property="og:title" content="Pibui - Discover J-Music" />
   <meta property="og:description" content="Pibui allows you to watch J-Music PVs randomly, based on your preferences." />
-  <meta property="og:image" content="https://beta.pibui.org/assets/logo2.png" />
+  <meta property="og:image" content="https://pibui.org/assets/logo2.png" />
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image" />
-  <meta property="twitter:url" content="https://beta.pibui.org/" />
+  <meta property="twitter:url" content="https://pibui.org/" />
   <meta property="twitter:title" content="Pibui - Discover J-Music" />
   <meta property="twitter:description" content="Pibui allows you to watch J-Music PVs randomly, based on your preferences." />
-  <meta property="twitter:image" content="https://beta.pibui.org/assets/logo2.png" />
+  <meta property="twitter:image" content="https://pibui.org/assets/logo2.png" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
